@@ -3,7 +3,9 @@ package edu.kit.tm.cm.iot.sensingdevice.logic.model;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.NonNull;
@@ -12,6 +14,7 @@ import lombok.ToString;
 
 @Getter
 @Setter
+@AllArgsConstructor
 @NoArgsConstructor
 @ToString
 public class Sensor {
@@ -36,7 +39,7 @@ public class Sensor {
 
     public void observe(@NonNull ObservedProperty observedProperty, @NonNull Observation observation) {
         var existingDatastreams = this.datastreams.stream()
-                .filter(d -> d.getObservedProperty().equals(observedProperty)).toList();
+                .filter(d -> d.getObservedProperty().equals(observedProperty)).collect(Collectors.toList());
         if (existingDatastreams.size() > 1) {
             throw new IllegalStateException(
                     "This sensor should not have had more than one datastream with the same observed property");
